Fix DATABASE_URL in .env.docker to use relative path; remove app.db file

--- a/.env.docker
+++ b/.env.docker
@@ -3,7 +3,7 @@ SECRET_KEY=change-me
 ACCESS_TOKEN_EXPIRES_MINUTES=15
 REFRESH_TOKEN_EXPIRES_DAYS=7
 JWT_ALGORITHM=HS256
-DATABASE_URL=sqlite+aiosqlite:////app/data/app.db
+DATABASE_URL=sqlite+aiosqlite:///./app/data/app.db
 RATE_LIMIT_DEFAULT_LIMIT=60
 RATE_LIMIT_DEFAULT_WINDOW=60
 RATE_LIMIT_LOGIN_LIMIT=5
